fix: added communication channel with openai

--- a/apps/server/.env.example
+++ b/apps/server/.env.example
@@ -2,3 +2,6 @@ NODE_ENV=development
 PORT=3000
 CORS_ORIGIN=http://localhost:3000
 LOG_LEVEL=debug
+
+# OpenAI Configuration
+OPENAI_API_KEY=your-api-key-here
