--- a/turbo.json
+++ b/turbo.json
@@ -12,7 +12,7 @@
     "dev": {
       "cache": false,
       "persistent": true,
-      "dependsOn": ["^build"]
+      "dependsOn": []
     },
     "start": {
       "cache": false,
