--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "check-types": "turbo run check-types"
   },
   "devDependencies": {
+    "@types/uuid": "^10.0.0",
     "prettier": "^3.5.0",
     "turbo": "^2.4.2",
     "typescript": "5.7.3"
@@ -22,5 +23,8 @@
   "workspaces": [
     "apps/*",
     "packages/*"
-  ]
+  ],
+  "dependencies": {
+    "uuid": "^11.0.5"
+  }
 }
